fix: refactor all works to migrate to JAVA21
support jenkins 2.458-slim use Jackson Json annotations

and eclipse microprofile rest client builder